# dp_sgd_classification

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/data_docs/: preprocessing.md  subset_strategy.md
docs/notebooks/: celeba_eyeglasses_workflow.md
docs/test_docs/: test_data.md  test_train_baseline.md  test_train_dp.md  test_utils.md
docs/train_docs/: baselines.md  dp_sgd.md
envs/: environment.yml  requirements.txt
notebooks/: README_config.md  celeba_eyeglasses_workflow.ipynb  config.yaml
scripts/: celeba_analyze.py  celeba_build_subset.py  celeba_centering.py  celeba_preprocess.py  celeba_subset_review.py  create_gif_from_notebook.py  create_training_dynamics_gif.py
src/: __init__.py  celeba_analysis.py  celeba_builder.py  celeba_diagnostics.py  celeba_io.py  celeba_plots.py  celeba_preprocess_core.py  celeba_workflow.py  config.py  data.py  model.py  nb_display.py  nb_utils.py  plotting.py  sweeps.py  train_baseline.py  train_dp.py  utils.py
src/config/: __init__.py  notebook.py  platform.py  training.py
src/core/: __init__.py  data.py
src/datasets/: __init__.py
src/datasets/celeba/: __init__.py  analysis.py  diagnostics.py  index.py  io.py  (+3 more)
src/notebooks/: __init__.py  display.py  setup.py  utils.py
src/training/: __init__.py  run_manager.py  sweep_manager.py  trainer.py  visualization.py
src/visualization/: __init__.py  training.py
tests/: conftest.py  test_celeba_analyze.py  test_celeba_build_subset.py  test_celeba_centering.py  test_celeba_preprocess.py  test_data.py  test_train_baseline.py  test_train_dp.py  test_utils.py
